# C_Lang_Lexer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  fsm.c  fsm.h  lexer.c  lexer.h  ui.h
tests/: CMakeLists.txt  test.c  testSrc.test
