set(sources lexer.c fsm.c)
set(headers lexer.h ui.h fsm.h)

add_library(lexer
	SHARED
	${sources}
	${headers}
)

set_target_properties(
	lexer
	PROPERTIES 
		POSITION_INDEPENDENT_CODE	1 
		CMAKE_VISIBILITY_PRESET		hidden
		VISIBILITY_INLINES_HIDDEN   1 
		OUTPUT_NAME					"myLexer"
		DEBUG_POSTFIX				"_d" 
		PUBLIC_HEADER				"ui.h;${INSTALL_INCLUDEDIR}/Export.h"
		MAXOSX_RPATH				ON
)

include(GenerateExportHeader)
generate_export_header(
	lexer 
	BASE_NAME "LEXER"
	EXPORT_MACRO_NAME "LEXER_EXPORT"
	EXPORT_FILE_NAME "${INSTALL_INCLUDEDIR}/Export.h"
	DEPRECATED_MACRO_NAME "LEXER_DEPRECATED"
    NO_EXPORT_MACRO_NAME "LEXER_NO_EXPORT"
	STATIC_DEFINE "LEXER_STATIC_DEFINE"
	NO_DEPRECATED_MACRO_NAME "LEXER_NO_DEPRECATED"
    DEFINE_NO_DEPRECATED
)

target_include_directories(
	lexer
	PUBLIC
	${INSTALL_INCLUDEDIR}
)

install(
TARGETS 
	lexer
ARCHIVE 
	DESTINATION ${INSTALL_LIBDIR}
	COMPONENT   lib
RUNTIME
	DESTINATION ${INSTALL_BINDIR}
	COMPONENT   bin
LIBRARY
	DESTINATION ${INSTALL_LIBDIR}
	COMPONENT   lib
PUBLIC_HEADER
	DESTINATION ${INSTALL_INCLUDEDIR}
	COMPONENT   dev
)

